# dcimport

./: README.md  demo.tape  pyproject.toml
.github/workflows/: check.yml  ci.yml  publish.yml
src/dcimport/: afc_utils.py  db.py  heic.py  immutable.py  importer.py  layout.py  main.py
tests/: conftest.py  fake_source.py  helpers.py  test_db.py  test_heic.py  test_importer.py  test_layout.py  test_live_photos.py  test_main.py  test_plan.py
