[project]
name = "dcimport"
version = "0.1.1"
description = "Import photos and videos from your iPhone to your computer via USB."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "artificiadrian", email = "adrian@artificiadrian.com" }]
keywords = [
    "iphone",
    "photos",
    "videos",
    "import",
    "usb",
    "dcim",
    "afc",
    "heic",
    "backup",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Utilities",
]
dependencies = ["pymobiledevice3>=9.33.1,<10", "rich>=14"]

[project.optional-dependencies]
heic = ["pillow-heif>=1.1.1"]

[project.urls]
Repository = "https://github.com/artificiadrian/dcimport"
Issues = "https://github.com/artificiadrian/dcimport/issues"

[project.scripts]
dcimport = "dcimport.main:cli"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dcimport[heic]",
    "pyright>=1.1.410",
    "pytest>=8",
    "ruff>=0.15.19",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "EM", "TRY", "C90"]
ignore = ["E501"]                                                     # line width is owned by `ruff format`

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.pyright]
reportImplicitOverride = "warning"
reportMatchNotExhaustive = "warning"
reportMissingTypeStubs = "none"
